--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_AUTOUIC_SEARCH_PATHS "${CMAKE_SOURCE_DIR}/src/form")
 
+#add_definitions(-DGRAPHICS_VULKAN)
+add_definitions(-DGRAPHICS_OPENGL)
+
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     set(CMAKE_PREFIX_PATH "C:/Qt/6.8.1/msvc2022_64")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
