--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.29)
 project(HyperDemo)
+project(HyperDemo VERSION 1.0.1)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_AUTOMOC ON)
@@ -8,24 +9,50 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_AUTOUIC_SEARCH_PATHS "${CMAKE_SOURCE_DIR}/src/form")
 
-add_definitions(-DGRAPHICS_VULKAN)
-#add_definitions(-DGRAPHICS_OPENGL)
+#add_definitions(-DGRAPHICS_VULKAN)
+add_definitions(-DGRAPHICS_OPENGL)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     set(CMAKE_PREFIX_PATH "C:/Qt/6.8.1/msvc2022_64")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-    set(CMAKE_PREFIX_PATH "/Users/turiing/Qt/6.8.1/macos/lib/cmake")
+    set(CMAKE_PREFIX_PATH "/Users/turiing/Qt6.9/6.9.0/macos/lib/cmake")
+elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
+    set(CMAKE_PREFIX_PATH "/Users/turiing/Qt6.9/6.9.0/ios/")
 endif ()
 
-find_package(Qt6 COMPONENTS Core Gui Widgets REQUIRED)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 add_subdirectory(external/HyperRender)
+include_directories(external/HyperRender/include)
 
-file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS src/*.cpp src/*.h)
-add_executable(${PROJECT_NAME} ${SOURCE})
+file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS src/*.cpp src/*.h src/*.mm)
+
+if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+    qt_add_executable(${PROJECT_NAME} MANUAL_FINALIZATION ${SOURCE})
+else()
+    if(ANDROID)
+        add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCES})
+    else()
+        add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
+    endif()
+endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     include(${CMAKE_SOURCE_DIR}/cmake/windows.cmake)
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     include(${CMAKE_SOURCE_DIR}/cmake/macos.cmake)
+elseif (CMAKE_SYSTEM_NAME STREQUAL "iOS")
+    include(${CMAKE_SOURCE_DIR}/cmake/ios.cmake)
 endif ()
+
+include(GNUInstallDirs)
+install(TARGETS ${PROJECT_NAME}
+        BUNDLE DESTINATION .
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+
+if(QT_VERSION_MAJOR EQUAL 6)
+    qt_finalize_executable(${PROJECT_NAME})
+endif()
