feat:改变代码架构、新增测试子工程、新增液化测试

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/HyperRender"]
 	path = external/HyperRender
 	url = https://github.com/TURIING/HyperRender
+[submodule "external/spdlog"]
+	path = external/spdlog
+	url = https://github.com/gabime/spdlog
