--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,16 @@
-cmake_minimum_required(VERSION 3.29)
+cmake_minimum_required(VERSION 3.15)
 project(HyperDemo)
-project(HyperDemo VERSION 1.0.1)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
-set(CMAKE_AUTOUIC_SEARCH_PATHS "${CMAKE_SOURCE_DIR}/src/form")
+set(CMAKE_AUTOUIC_SEARCH_PATHS "${CMAKE_SOURCE_DIR}/application/form")
 
 add_definitions(-DGRAPHICS_VULKAN)
 #add_definitions(-DGRAPHICS_OPENGL)
+include_directories(${CMAKE_SOURCE_DIR}/external/HyperRender/include)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     set(CMAKE_PREFIX_PATH "C:/Qt/6.8.1/msvc2022_64")
@@ -23,36 +23,20 @@ endif ()
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+#add_subdirectory(external/spdlog)
 add_subdirectory(external/HyperRender)
-include_directories(external/HyperRender/include src/ui)
+add_subdirectory(application)
+add_subdirectory(tests)
 
-file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS src/*.cpp src/*.h src/*.mm)
 
-if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(${PROJECT_NAME} MANUAL_FINALIZATION ${SOURCE})
-else()
-    if(ANDROID)
-        add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCES})
-    else()
-        add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
-    endif()
-endif()
 
-if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-    include(${CMAKE_SOURCE_DIR}/cmake/windows.cmake)
-elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-    include(${CMAKE_SOURCE_DIR}/cmake/macos.cmake)
-elseif (CMAKE_SYSTEM_NAME STREQUAL "iOS")
-    include(${CMAKE_SOURCE_DIR}/cmake/ios.cmake)
-endif ()
-
-include(GNUInstallDirs)
-install(TARGETS ${PROJECT_NAME}
-        BUNDLE DESTINATION .
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
-
-if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(${PROJECT_NAME})
-endif()
+#include(GNUInstallDirs)
+#install(TARGETS ${PROJECT_NAME}
+#        BUNDLE DESTINATION ..
+#        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+#        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+#)
+#
+#if(QT_VERSION_MAJOR EQUAL 6)
+#    qt_finalize_executable(${PROJECT_NAME})
+#endif()
