feat:新增阴影测试

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(Liquify)
 add_subdirectory(Selection)
 add_subdirectory(EmbossFilter)
 add_subdirectory(GaussianBlur)
+add_subdirectory(ShadowEffect)
