feat:新增漩涡变形测试

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(Selection)
 add_subdirectory(EmbossFilter)
 add_subdirectory(GaussianBlur)
 add_subdirectory(ShadowEffect)
+add_subdirectory(SwirlWarpEffect)
